# sentiment-analysis-project

./: .gitignore  CNAME  Dockerfile  Makefile  README.md  REAME.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  model-training.yml
config/: config.yaml
mlops/: main.py
models/: metrics.txt  sentiment_logreg.pkl  tfidf_extractor.pkl
src/: __init__.py
src/app/: main.py  schemas.py
src/config/: __init__.py  config.py  constants.py  dataclasses.py
src/data/: __init__.py  data_loader.py  preprocessor.py
src/features/: __init__.py  base_feature_extractor.py  bow_extractor.py  factory.py  tfidf_extractor.py
src/models/: __init__.py  factory.py  logreg_model.py  model_interface.py  naive_bayes_model.py
src/pipeline/: __init__.py  evaluation.py  predict_pipeline.py  prediction.py  sentiment_classifier.py  sentiment_pipeline.py  train_pipeline.py  training.py
src/sentimentanalysis/: __init__.py  cli.py
src/sentimentanalysis/app/: main.py  schemas.py
src/sentimentanalysis/config/: __init__.py  constants.py  dataclasses.py
src/sentimentanalysis/data/: __init__.py  data_loader.py  preprocessor.py
src/sentimentanalysis/features/: __init__.py  base_feature_extractor.py  bow_extractor.py  factory.py  tfidf_extractor.py
src/sentimentanalysis/models/: __init__.py  factory.py  logreg_model.py  model_interface.py  naive_bayes_model.py
src/sentimentanalysis/pipeline/: __init__.py  evaluation.py  prediction.py  sentiment_pipeline.py  training.py
src/sentimentanalysis/utils/: __init__.py  config.py  logger.py  sentiment_mapper.py
src/utils/: __init__.py  config.py  load_config.py  logger.py  sentiment_mapper.py
tests/: __init__.py  test_feature_extractor.py  test_model.py  test_preprocessor.py
